<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.0.1</version>
  <description>Bringup package aligned with 常用命令.md.</description>
  <maintainer email="nx@example.com">nx</maintainer>
  <license>Apache-2.0</license>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <exec_depend>sllidar_ros2</exec_depend>
  <exec_depend>robot_driver</exec_depend>
  <exec_depend>jetson_car_demo</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
